# brine

./: .gitignore  .gitmodules  Makefile  README.md  rebar.config
c_src/: Makefile  brine_nif.c  brine_queue.c  brine_queue.h  brine_serialize.c  brine_serialize.h  brine_task.c  brine_task.h
c_src/libbrine/: .gitignore  CMakeLists.txt  Makefile.embed
c_src/libbrine/include/: brine.h  brine_deps.h  brine_serialize.h  brine_types.h
c_src/libbrine/src/: brine.c  brine_serialize.c
c_src/libbrine/src/blake2/: CMakeLists.txt  blake2b.c
c_src/libbrine/src/ed25519/: CMakeLists.txt  seed.c
c_src/libbrine/tests/: keypair.c  serialize.c  test.h
c_src/patches/: ed25519-seed.c.patch  ed25519-sha512.c.patch
include/: brine.hrl
src/: brine.app.src  brine.erl  brine_app.erl  brine_format.erl  brine_nif.erl  brine_perf.erl  brine_stress.erl  brine_sup.erl
test/: keypair_test.erl  serialize_test.erl
